# app-completion

./: README.md  app.py  pyproject.toml
prompt/: test.ipynb
static/: main.css
templates/: index.html
